updated teachme ... fixed layout navbar alignment, now items are in the middle

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ a.navbar-brand {
 }
 
 .nav-item {
-  margin: 0 50px;
+  margin: 0 5rem;
 }
 
 .navbar-toggler {
@@ -39,7 +39,7 @@ a.navbar-brand {
 
 .btn.btn-outline-success {
   font-size: 2rem;
-  margin-left: 25px;
+  margin: 0 2rem;
 }
 
 // ------ Homepage styling below ------
